# ArcAI-V2

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_test.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  LightwatchAI.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  arc_bptt.h  arc_dataset.h  arc_generate.h  arc_kernels.h  arc_run  arc_run.cpp  arc_run.vcxproj  arc_run.vcxproj.filters  arc_train  arc_train.cpp  arc_train.vcxproj  arc_train.vcxproj.filters  arc_types.h  cmake_install.cmake  cuda_device_test.cpp  cuda_test.cpp  data.txt  error_output.txt  gui_mainwindow.h  lightwatch_config.cpp  lightwatch_config.h  lightwatch_gui.cpp  lightwatch_kernels.h  lightwatch_run.cpp  lightwatch_run.vcxproj  lightwatch_run.vcxproj.filters  lightwatch_train.cpp  lightwatch_train.vcxproj  (+11 more)
.github/workflows/: release.yml
arc_run.dir/Release/: arc_run.exe.recipe
arc_run.dir/Release/arc_run.tlog/: CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
arc_train.dir/Release/: arc_train.exe.recipe
arc_train.dir/Release/arc_train.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_cpu/: ALL_BUILD.vcxproj  ArcAI.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  arc_run.vcxproj  arc_run.vcxproj.filters  arc_train.vcxproj  arc_train.vcxproj.filters  cmake_install.cmake
build_cpu/arc_run.dir/Release/: arc_run.exe.recipe
build_cpu/arc_train.dir/Release/: arc_train.exe.recipe
build_cuda/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ArcAI.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  arc_run.vcxproj  arc_run.vcxproj.filters  arc_train.vcxproj  arc_train.vcxproj.filters  cmake_install.cmake
build_cuda/arc_run.dir/Release/: arc_run.exe.recipe
build_cuda/arc_train.dir/Release/: arc_train.exe.recipe
build_cuda_test/: ALL_BUILD.vcxproj  ArcAI.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  arc_run.vcxproj  arc_run.vcxproj.filters  arc_train.vcxproj  arc_train.vcxproj.filters  cmake_install.cmake  simple_cuda_test.vcxproj  simple_cuda_test.vcxproj.filters  test_cuda_functionality.vcxproj  test_cuda_functionality.vcxproj.filters
build_cuda_test/arc_run.dir/Release/: arc_run.exe.recipe
build_cuda_test/arc_train.dir/Release/: arc_train.exe.recipe
build_cuda_test/simple_cuda_test.dir/Release/: simple_cuda_test.exe.recipe
build_fresh/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LightwatchAI.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  data_preprocess.vcxproj  data_preprocess.vcxproj.filters  lightwatch_run.vcxproj  lightwatch_run.vcxproj.filters  lightwatch_train.vcxproj  lightwatch_train.vcxproj.filters  simple_cuda_test.vcxproj  simple_cuda_test.vcxproj.filters
build_fresh/data_preprocess.dir/Release/: data_preprocess.exe.recipe
build_fresh/lightwatch_run.dir/Release/: lightwatch_run.exe.recipe
build_fresh/lightwatch_train.dir/Release/: lightwatch_train.exe.recipe
build_fresh/simple_cuda_test.dir/Release/: simple_cuda_test.exe.recipe
build_test/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LightwatchAI.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  data_preprocess.vcxproj  data_preprocess.vcxproj.filters  lightwatch_run.vcxproj  lightwatch_run.vcxproj.filters  lightwatch_train.vcxproj  lightwatch_train.vcxproj.filters  simple_cuda_test.vcxproj  simple_cuda_test.vcxproj.filters
build_test/data_preprocess.dir/Release/: data_preprocess.exe.recipe
build_test/lightwatch_run.dir/Release/: lightwatch_run.exe.recipe
build_test/lightwatch_train.dir/Release/: lightwatch_train.exe.recipe
build_test/simple_cuda_test.dir/Release/: simple_cuda_test.exe.recipe
lightwatch_run.dir/Release/: lightwatch_run.exe.recipe
lightwatch_run.dir/Release/lightwatch_run.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lightwatch_run.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lightwatch_train.dir/Release/: lightwatch_train.exe.recipe
lightwatch_train.dir/Release/lightwatch_train.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
simple_cuda_test.dir/Release/: simple_cuda_test.exe.recipe
simple_cuda_test.dir/Release/simple_cuda_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: data_preprocess.cpp  data_preprocess.h  data_preprocess_impl.cpp  gui_mainwindow.cpp  gui_mainwindow.h  lightwatch_bptt.h  lightwatch_config.cpp  lightwatch_dataset.h  lightwatch_generate.h  lightwatch_train.cpp  lightwatch_types.cpp  lightwatch_types.h
test_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LightwatchAI.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  data_preprocess.vcxproj  data_preprocess.vcxproj.filters  lightwatch_cli.vcxproj  lightwatch_run.vcxproj  lightwatch_run.vcxproj.filters  lightwatch_train.vcxproj  lightwatch_train.vcxproj.filters  simple_cuda_test.vcxproj  simple_cuda_test.vcxproj.filters
test_build/data_preprocess.dir/Release/: data_preprocess.exe.recipe
test_build/lightwatch_cli.dir/Release/: lightwatch_cli.exe.recipe
test_build/lightwatch_run.dir/Release/: lightwatch_run.exe.recipe
test_build/lightwatch_train.dir/Release/: lightwatch_train.exe.recipe
test_build/simple_cuda_test.dir/Release/: simple_cuda_test.exe.recipe
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
(+206 files in other folders)
